--- a/index.html
+++ b/index.html
@@ -11,44 +11,44 @@
     <div id="main">
         <div id="displa-box">0</div>
         <div id="function">
-            <div class="fun">MC</div>
-            <div class="fun">MR</div>
-            <div class="fun">M+</div>
-            <div class="fun">M-</div>
-            <div class="fun">MS</div>
-            <div class="fun">m^</div>
+            <button class="fun">MC</button>
+            <button class="fun">MR</button>
+            <button class="fun">M+</button>
+            <button class="fun">M-</button>
+            <button class="fun">MS</button>
+            <button class="fun">m^</button>
         </div>
         <div class="top-key">
-        <div class="top-fun prc">%</div>
-        <div class="top-fun ec">EC</div>
-        <div class="top-fun c">C</div>
-        <div class="top-fun cut">CUT</div>
+        <button class="top-fun prc">%</button>
+        <button class="top-fun ec">EC</button>
+        <button class="top-fun c">C</button>
+        <button class="top-fun cut">CUT</button>
 
         </div>
         <div id="btm">
             <div id="num-key">
-        <div class="numbers ">1/X</div>
-        <div class="numbers ">X^2</div>
-        <div class="numbers ">X</div>
+        <button class="numbers ">1/X</button>
+        <button class="numbers ">X^2</button>
+        <button class="numbers ">X</div>
         
-        <div class="numbers one">1</div>
-        <div class="numbers two">2</div>
-        <div class="numbers three">3</div>
-        <div class="numbers for">4</div>
-        <div class="numbers five">5</div>
-        <div class="numbers six">6</div>
-        <div class="numbers seven">7</div>
-        <div class="numbers eath">8</div>
-        <div class="numbers nain">9</div>
-        <div class="numbers jero">00</div>
-        <div class="numbers dot">.</div>
+        <button class="numbers one">1</button>
+        <button class="numbers two">2</button>
+        <button class="numbers three">3</button>
+        <button class="numbers for">4</button>
+        <button class="numbers five">5</button>
+        <button class="numbers six">6</button>
+        <button class="numbers seven">7</button>
+        <button class="numbers eath">8</button>
+        <button class="numbers nain">9</button>
+        <button class="numbers jero">00</button>
+        <button class="numbers dot">.</button>
        </div>
         <div class="left-key">
-        <div class="left-fun div ">/</div>
-        <div class="left-fun multi">X</div>
-        <div class="left-fun mainus">-</div>
-        <div class="left-fun pluse">+</div>
-        <div class="equalto">=</div>
+        <button class="left-fun div ">/<button/>
+        <button class="left-fun multi">X</button>
+        <button class="left-fun mainus">-</button>
+        <button class="left-fun pluse">+</button>
+        <button class="equalto">=</button>
 
             
         </div>
