--- a/project.html
+++ b/project.html
@@ -23,15 +23,15 @@
             <button class="key into c-key">*</button>
             </div>
             <div class="main-key">
-            <button class="key six">4</button>
+            <button class="key foursix">4</button>
             <button class="key five">5</button>
-            <button class="key four">6</button>
+            <button class="key six">6</button>
             <button class="key mainus c-key">-</button>
             </div>
             <div class="main-key">
-            <button class="key three">1</button>
+            <button class="key one">1</button>
             <button class="key two">2</button>
-            <button class="key one">3</button>
+            <button class="key three">3</button>
             <button class="key plus c-key">+</button>
             </div>
             <div class="main-key">
@@ -44,5 +44,6 @@
     </div>
 
     <script src="project.js"></script>
+    
 </body>
 </html>
